Need to shuffle letters in string. Need to search Hash table for acceptable strings. Need to save correct answers. Need to impliment levels.

--- a/WordJumble/WordJumble.vcxproj
+++ b/WordJumble/WordJumble.vcxproj
@@ -143,14 +143,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="Timer.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BST.h" />
-    <ClInclude Include="Dictionary.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="HTable.h" />
     <ClInclude Include="SLList.h" />
+    <ClInclude Include="Timer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
